--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-03  Funda Wang  <fundawang@linux.net.cn>
+
+	* zh_CN.po: Updated Simplified Chinese translation.
+
 2004-04-01  Michael Natterer  <mitch@gimp.org>
 
 	* it.po: Fixed translation of "Mosaic..." and made translations of
