--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-03  Funda Wang  <fundawang@linux.net.cn>
+
+	* zh_CN.po: Updated Simplified Chinese translation.
+
 2004-03-30  Guntupalli Karunakar  <karunakar@freedomink.org>
 
 	* pa.po: Added Punjabi translation by
