2004-04-03  Michael Natterer  <mitch@gimp.org>
	* de.po: translate "export" as "exportieren", not "importieren".
	Fixes bug #138960.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12876 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-03  Michael Natterer  <mitch@gimp.org>
+
+	* de.po: translate "export" as "exportieren", not "importieren".
+	Fixes bug #138960.
+
 2004-04-03  Funda Wang  <fundawang@linux.net.cn>
 
 	* zh_CN.po: Updated Simplified Chinese translation.
