--- a/po/de.po
+++ b/po/de.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: GIMP 1.3.27\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-03-23 16:10+0100\n"
-"PO-Revision-Date: 2004-03-19 20:52+0100\n"
+"PO-Revision-Date: 2004-04-03 19:40+0200\n"
 "Last-Translator: Sven Neumann <sven@gimp.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -6975,7 +6975,7 @@ msgstr "Pfade aus SVG importieren"
 
 #: app/gui/vectors-commands.c:737
 msgid "Export Path to SVG"
-msgstr "Pfade nach SVG importieren"
+msgstr "Pfade nach SVG exportieren"
 
 #: app/gui/vectors-menu.c:44
 msgid "/Path _Tool"
