--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-04  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimpimagemap.c (gimp_image_map_apply): do nothing if the
+	selection is empty. Fixes bug #138973.
+
 2004-04-03  Sven Neumann  <sven@gimp.org>
 
 	* app/text/gimptextlayer.c (gimp_text_layer_new): create the
