2004-04-04  Sven Neumann  <sven@gimp.org>
	Cache the GC for drawing the grid as suggested in bug #138081:

	* app/display/gimpdisplayshell.[ch]: added a grid_gc member to
	GimpDisplayShell.

	* app/display/gimpdisplayshell-handlers.c
	(gimp_display_shell_grid_notify_handler)
	(gimp_display_shell_disconnect): invalidate the grid GC.

	* app/display/gimpdisplayshell-draw.c (gimp_display_shell_draw_grid):
	use the cached grid_gc. Also applied the fix that Pedro Gimeno did
	for bug #138606.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12881 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,20 @@
 2004-04-04  Sven Neumann  <sven@gimp.org>
 
+	Cache the GC for drawing the grid as suggested in bug #138081:
+
+	* app/display/gimpdisplayshell.[ch]: added a grid_gc member to
+	GimpDisplayShell.
+
+	* app/display/gimpdisplayshell-handlers.c
+	(gimp_display_shell_grid_notify_handler)
+	(gimp_display_shell_disconnect): invalidate the grid GC.
+
+	* app/display/gimpdisplayshell-draw.c (gimp_display_shell_draw_grid):
+	use the cached grid_gc. Also applied the fix that Pedro Gimeno did
+	for bug #138606.
+
+2004-04-04  Sven Neumann  <sven@gimp.org>
+
 	* app/core/gimpundo.c (gimp_undo_type_to_name): added a missing
 	call to gettext(). Fixes bug #139000.
 
