2004-04-05  Sven Neumann  <sven@gimp.org>
	* plug-ins/Lighting/lighting_ui.c: applied the second patch
	attached to bug #138788 by William Skaggs. Removes some user
	interface elements that have no corresponding implementation and
	fixes preview updates.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12887 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-04-05  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/Lighting/lighting_ui.c: applied the second patch
+	attached to bug #138788 by William Skaggs. Removes some user
+	interface elements that have no corresponding implementation and
+	fixes preview updates.
+
 2004-04-04  Sven Neumann  <sven@gimp.org>
 
 	* Makefile.am
