--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-05  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2004-04-03  Michael Natterer  <mitch@gimp.org>
 
 	* de.po: translate "export" as "exportieren", not "importieren".
