2004-04-06  Sven Neumann  <sven@gimp.org>
	* pt.po: fixed translation for menu entry "/View/Move to screen...".
	Fixes bug #139141.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12892 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-06  Sven Neumann  <sven@gimp.org>
+
+	* pt.po: fixed translation for menu entry "/View/Move to screen...".
+	Fixes bug #139141.
+
 2004-04-05  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
