2004-04-06  IÃ±aki LarraÃ±aga  <dooteo@euskalgnu.org>
        * eu.po: Added Basque translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12893 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-06  Iñaki Larrañaga  <dooteo@euskalgnu.org>
+
+	* eu.po: Added Basque translation.
+
 2004-04-06  Sven Neumann  <sven@gimp.org>
 
 	* pt.po: fixed translation for menu entry "/View/Move to screen...".
