2004-04-06 Henrik Brix Andersen <brix@gimp.org>
* pt_BR.po: changed Mape to Mapa on line 2391 on request from Joao
S. O. Bueno <gwidion@mpc.com.br>


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12895 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-06  Henrik Brix Andersen  <brix@gimp.org>
+
+	* pt_BR.po: changed Mape to Mapa on line 2391 on request from Joao
+	S. O. Bueno <gwidion@mpc.com.br>
+
 2004-04-03  Funda Wang  <fundawang@linux.net.cn>
 
 	* zh_CN.po: Updated Simplified Chinese translation.
