--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-06  Iñaki Larrañaga  <dooteo@euskalgnu.org>
+
+	* configure.in: Added "eu" (Basque) to ALL_LINGUAS.
+
 2004-04-05  Pedro Gimeno  <pggimeno@wanadoo.es>
 
 	* plug-ins/script-fu/scripts/copy-visible.scm: Use
