2004-04-06  IÃ±aki LarraÃ±aga  <dooteo@euskalgnu.org>
	* eu.po: Added Basque translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12898 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-06  Iñaki Larrañaga  <dooteo@euskalgnu.org>
+
+	* eu.po: Added Basque translation.
+
 2004-04-06  Henrik Brix Andersen  <brix@gimp.org>
 
 	* pt_BR.po: changed Mape to Mapa on line 2391 on request from Joao
