2004-04-06  IÃ±aki LarraÃ±aga  <dooteo@euskalgnu.org>
	* eu.po: Added Basque translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12899 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-06  Iñaki Larrañaga  <dooteo@euskalgnu.org>
+
+	* eu.po: Added Basque translation.
+
 2004-03-28  Sven Neumann  <sven@gimp.org>
 
 	* Makefile.am (tips_POFILES): added en_GB.po (British English).
