--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-07  Samúel Jón Gunnarsson  <sammi@techattack.nu>
+
+	* is.po:  Added Icelandic translation by
+	Helgi Þormar Þorbjörnsson  <helgi@trance.is>
+
 2004-04-06  Iñaki Larrañaga  <dooteo@euskalgnu.org>
 
 	* eu.po: Added Basque translation.
