--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-07  Henrik Brix Andersen  <brix@gimp.org>
+
+	* configure.in (ALL_LINGUAS): revert addition of "is" until all
+	.po files are there.
+
 2004-04-07  Samúel Jón Gunnarsson  <sammi@techattack.nu>
 
 	* configure.in: Added "is" to ALL_LINGUAS
