2004-04-07  Evandro Fernandes Giovanini <evandrofg@ig.com.br>
	* pt_BR.po: Updated Brazilian Portuguese translation
	from João S. O. Bueno <gwidion@mpc.com.br>.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12903 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/pt_BR.po
+++ b/po-libgimp/pt_BR.po
@@ -95,12 +95,12 @@ msgid ""
 "(Do it manually to tune the result)"
 msgstr ""
 "Converter para Indexada usando configurações\n"
-"padrão (faça isso manualmente para ajustar oresultado)"
+"padrão (faça isso manualmente para ajustar o resultado)"
 
 #: libgimp/gimpexport.c:306
 #, c-format
 msgid "%s can only handle bitmap (two color) indexed images"
-msgstr "%s só pode tratar imagens bitmap (duas cores)³indexadas"
+msgstr "%s só pode tratar imagens bitmap (duas cores) indexadas"
 
 #: libgimp/gimpexport.c:307
 msgid ""
@@ -162,7 +162,7 @@ msgid ""
 "reasons:"
 msgstr ""
 "Sua imagem deve ser exportada antes de poder ser salva como %s, pelas "
-"razõesa seguir:"
+"razões a seguir:"
 
 #: libgimp/gimpexport.c:563
 msgid "The export conversion won't modify your original image."
@@ -477,7 +477,7 @@ msgstr "E_scalar"
 
 #: libgimpwidgets/gimpstock.c:263
 msgid "Crop"
-msgstr "Aparar"
+msgstr "Cortar"
 
 #: libgimpwidgets/gimpstock.c:280
 msgid "_Transform"
