2004-04-07  Pablo G. del Campo  <pablodc@bigfoot.com>
	* es.po: Updated Spanish translation and bugfix #134791.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12905 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-07  Pablo G. del Campo  <pablodc@bigfoot.com>
+
+	* es.po: Updated Spanish translation and bugfix #134791.
+
 2004-04-07  Samúel Jón Gunnarsson  <sammi@techattack.nu>
 
 	* is.po:  Added Icelandic translation by
