--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-07  Pablo G. del Campo  <pablodc@bigfoot.com>
+
+	* es.po: Updated Spanish translation.
+
 2004-04-07  Evandro Fernandes Giovanini <evandrofg@ig.com.br>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation
