2004-04-08  Sven Neumann  <sven@gimp.org>
	* tools/gimp-remote.c (start_new_gimp): applied a patch from
	Michael Matz that calls fork() before starting gimp. This is to
	avoid X server authentification problems (bug #139158).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12907 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-04-08  Sven Neumann  <sven@gimp.org>
+
+	* tools/gimp-remote.c (start_new_gimp): applied a patch from
+	Michael Matz that calls fork() before starting gimp. This is to
+	avoid X server authentification problems (bug #139158).
+
 2004-04-07  Henrik Brix Andersen  <brix@gimp.org>
 
 	* configure.in (ALL_LINGUAS): revert addition of "is" until all
