2004-04-08  Sven Neumann  <sven@gimp.org>
	* plug-ins/script-fu/siod-wrapper.c: applied a patch from Kevin
	Cozens that makes the Script-Fu PDB marshaller handle NULL
	strings. Some minor code cleanup. Fixes bug #139386.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12908 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-04-08  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/script-fu/siod-wrapper.c: applied a patch from Kevin
+	Cozens that makes the Script-Fu PDB marshaller handle NULL
+	strings. Some minor code cleanup. Fixes bug #139386.
+
+2004-04-08  Sven Neumann  <sven@gimp.org>
+
 	* tools/gimp-remote.c (start_new_gimp): applied a patch from
 	Michael Matz that calls fork() before starting gimp. This is to
 	avoid X server authentification problems (bug #139158).
