--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-09  Henrik Brix Andersen  <brix@gimp.org>
+
+	* README.i18n: s/14/20/ plus whitespace clean-up.
+
 2004-04-08  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/script-fu/siod-wrapper.c: applied a patch from Kevin
