2004-04-09  Manish Singh  <yosh@gimp.org>
        * plug-ins/common/jpeg.c: Uglier workaround for bug #138357, since
        the previous one did break error handling. Fixes bug #139571.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12910 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-09  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/common/jpeg.c: Uglier workaround for bug #138357, since
+	the previous one did break error handling. Fixes bug #139571.
+
 2004-04-09  Henrik Brix Andersen  <brix@gimp.org>
 
 	* README.i18n: s/14/20/ plus whitespace clean-up.
