--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-04-10  Sven Neumann  <sven@gimp.org>
+
+	* tools/gimp-remote.c (start_new_gimp): reverted the last change
+	and did a different fix that involves closing the X display before
+	starting gimp (bug #139158).
+
 2004-04-09  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/common/jpeg.c: Uglier workaround for bug #138357, since
