2004-04-10  Sven Neumann  <sven@gimp.org>
	* docs/gimp-remote.1.in: updated example URL.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12915 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-10  Sven Neumann  <sven@gimp.org>
+
+	* docs/gimp-remote.1.in: updated example URL.
+
 2004-04-10  Pedro Gimeno  <pggimeno@wanadoo.es>
 
 	* app/core/gimpdrawable-transform.c
